# project-support-drf

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
drf/comment/: models.py  permissions.py  serializers.py  urls.py  views.py
drf/comment/migrations/: 0001_initial.py  0002_comment_reply_to.py  0003_alter_comment_reply_to.py  0003_initial.py
drf/drf/: asgi.py  settings.py  urls.py  wsgi.py
drf/support/: admin.py  models.py  serializers.py  urls.py  views.py
drf/support/migrations/: 0001_initial.py  0002_rename_author_comment_user_id_and_more.py  0002_rename_topic_ticket.py  0003_rename_status_ticket_status_id.py  0003_ticket_user_id.py  0004_rename_ticket_id_comment_ticket_and_more.py  0004_rename_user_id_ticket_user.py  0005_comment_parent.py
drf/ticket/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
drf/ticket/migrations/: 0001_initial.py  0002_initial.py
drf/userauth/: models.py  permissions.py  serializers.py  views.py
drf/userauth/migrations/: 0001_initial.py  0002_remove_customuser_time_create_and_more.py
support/: manage.py  pyproject.toml  pytest.ini
support/comment/: models.py  serializers.py  tasks.py  views.py
support/comment/migrations/: 0001_initial.py  0002_initial.py
support/common_modules/: permissions.py  state_machine.py
support/common_permissions/: permissions.py
support/support/: asgi.py  celery.py  celery_settings.py  settings.py  urls.py  wsgi.py
support/tests/: confest.py
support/tests/api/: test_userauth.py
support/ticket/: admin.py  models.py  serializers.py  service.py  state_machine.py  tasks.py  urls.py  views.py
support/ticket/migrations/: 0001_initial.py  0002_alter_ticket_comments.py  0002_initial.py  0003_alter_ticket_title.py  0003_remove_ticket_comments.py  0003_ticket_comments.py  0004_remove_ticket_comments.py  0004_ticket_comments.py  0005_alter_ticket_assigned_alter_ticket_reporter.py
support/userauth/: models.py  serializers.py  urls.py  views.py
support/userauth/migrations/: 0001_initial.py  0003_alter_customuser_username.py
tests/: confest.py
tests/api/: test_userauth.py
