[tool.poetry]
name = "project-support-drf"
version = "0.1.0"
description = ""
authors = ["Alexey Razmanov <razmanov666@gmail.com>"]
readme = "README.md"
packages = [{include = "project_support_drf"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
