[tool.poetry]
name = "project-support-drf"
version = "0.1.0"
description = ""
authors = ["Alexey Razmanov <razmanov666@gmail.com>"]
readme = "README.md"
packages = [{include = "project_support_drf"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
djangorestframework = "^3.14.0"
djoser = "^2.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[tool.isort]
line_length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "support.support.settings"
python_file = ["tests.py", "test_*.py", "*_tests.py"]
markers = [
    "django_db: Tests with Django DB",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
